--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SlackClone</title>
+    <title>Sladock</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -11,7 +11,5 @@
   <body>
     <%= notice %>
     <%= yield %>
-    <%= link_to "中文版", :controller => controller_name, :action => action_name, :locale => "zh-TW" %>
-    <%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %>
   </body>
 </html>
