--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -4,15 +4,15 @@
   </h3> 
 </div>
 <div class="w-full bg-white border "></div>
-<div class="w-full"><%= t("leftbar.sidebar.threads") %></div>
-<div class="w-full"><%= t("leftbar.sidebar.mentions") %></div>
-<div class="w-full"><%= t("leftbar.sidebar.save") %></div>
-<div class="w-full"><%= t("leftbar.sidebar.more") %></div>
-<div class="w-full"><%= t("leftbar.sidebar.shared") %></div>
+<div class="w-full"><%= t(".sidebar.threads") %></div>
+<div class="w-full"><%= t(".sidebar.mentions") %></div>
+<div class="w-full"><%= t(".sidebar.save") %></div>
+<div class="w-full"><%= t(".sidebar.more") %></div>
+<div class="w-full"><%= t(".sidebar.shared") %></div>
 <div class="w-full">
   <p class="font-medium flex justify-between">
-    <%= t("leftbar.channel.name") %>
-    <%= link_to t("leftbar.channel.new"), new_workspace_channels_path(workspace_id: @workspace.id) %>
+    <%= t(".channel.name") %>
+    <%= link_to t(".channel.new"), new_workspace_channels_path(workspace_id: @workspace.id) %>
   </p>
     <% @channels.each do |channel| %>
       <li data-controller="channels" data-channels-id="<%= channel.id %>">
@@ -26,10 +26,11 @@
     <% end %>
 </div>
 <div class="w-full">
-  <p class="font-medium"><%= t("leftbar.channel.direct") %></p>
+  <p class="font-medium"><%= t(".channel.direct") %></p>
   <% (@workspace.users - [current_user]).each do |user| %>
     <li>
       <%= link_to user.nickname, workspace_directmsg_path(@workspace, user.id) %>
     </li>
   <% end %>
 </div>
+
