--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -1,27 +1,22 @@
 <% if in_workspace? %>
-<<<<<<< HEAD
-=======
-<div>
-  <% @workspace.channels.each do |channel| %>
->>>>>>> 將文字更改為i18n，並擁有中英文兩版
   <div>
     <%= render "./shared/header" %>
     <div class="chatroom grid grid-cols-12">
       <div class="bg-light_sladock text-white col-span-2">
-        <h1><%= t("workspace.show.name",name:@workspace.name) %></h1>
-        <%= link_to t("workspace.show.create_channel"), new_workspace_channels_path(@workspace.id) %>
-        <h2><%= t("workspace.show.all_channels",name:@workspace.name) %></h2>
+        <h1><%= t(".name",name:@workspace.name) %></h1>
+        <%= link_to t(".create_channel"), new_workspace_channels_path(@workspace.id) %>
+        <h2><%= t(".all_channels",name:@workspace.name) %></h2>
       <div>
         <% @workspace.channels.each do |channel| %>
           <div>
             <%= link_to channel.name, workspace_channel_path(workspace_id: @workspace.id, id: channel.id) %>
-            <%= link_to t("workspace.show.delete_channel"), channel_path(channel.id), method: "delete", destroy_channel: channel.id, data:{confirm:"確定要刪除嗎？"} %>
-            <%= link_to t("workspace.show.join_channel"), channel_users_channels_path(channel.id), method: "post", remote: true, add_channel: channel.id %>
-            <%= link_to t("workspace.show.leave_channel"), channel_users_channels_path(channel.id), method: "delete", remote: true, leave_channel: channel.id %>
+            <%= link_to t(".delete_channel"), channel_path(channel.id), method: "delete", destroy_channel: channel.id, data:{confirm:t("utilities.messages.delete")} %>
+            <%= link_to t(".join_channel"), channel_users_channels_path(channel.id), method: "post", remote: true, add_channel: channel.id %>
+            <%= link_to t(".leave_channel"), channel_users_channels_path(channel.id), method: "delete", remote: true, leave_channel: channel.id %>
           </div>
         <% end %>
       </div>
-        <h2><%= t("workspace.show.your_channels") %></h2>
+        <h2><%= t(".your_channels") %></h2>
           <div class="active-area">
             <% @joined_channel.each do |channel| %>
               <div class="active-channel" channel-id=<%= channel.channel_id %>  >
@@ -30,8 +25,10 @@
             <% end %>
           </div>
           <div>
-            <%= link_to t("index.back"), root_path %>
+            <%= link_to t("utilities.back_home"), root_path %>
           </div>
+        <%= link_to "中文版", :controller => controller_name, :action => action_name, :locale => "zh-TW" %>
+        <%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %>
       </div>
       <div class=" col-span-10 border border-1">
       </div>  
@@ -43,38 +40,30 @@
       </div>  
     </div>
   </div>
-<<<<<<< HEAD
   <%# button顯示 %>
-=======
-  <% end %>
-<% else %>
-  <h2><%= t("workspace.error.messages.join") %></h2>
-<% end %>
-<%# button顯示 %>
->>>>>>> 將文字更改為i18n，並擁有中英文兩版
-<button class="invite-ws-btn h-8 w-8  rounded hover:bg-gray-100 hover:stroke-gray active:bg-gray-400 focus:outline-none">
-  <%= inline_svg_pack_tag( "media/images/invite.svg" , class: "stroke-current text-gray-600 hover:stroke-gray") %>
-</button>
+  <button class="invite-ws-btn h-8 w-8  rounded hover:bg-gray-100 hover:stroke-gray active:bg-gray-400 focus:outline-none">
+    <%= inline_svg_pack_tag( "media/images/invite.svg" , class: "stroke-current text-gray-600 hover:stroke-gray") %>
+  </button>
 
-<div class="add-people absolute w-full h-full top-0 bg-black bg-opacity-25 hidden flex justify-center items-center">
-  <div class="px-6 py-4 bg-white shadow-2xl w-1/3 h-1/3 rounded relative">
-    <div class="flex justify-between">
-      <h5 class="font-bold"><%= t("invite.add_people") %></h5>
-    <button class="invite-cancel-btn font-bold text-gray-600 focus:outline-none">X</button>
-    </div>
-    <span class="text-xs text-gray-600">#student</span>
-    <%= form_with(model:@invitation,url:workspace_invitations_path(@workspace),method: "POST",local: true) do |f| %>
-      <%= f.text_field :receiver_email,placeholder:t("invite.placeholder"),autocomplete:"off",class:"search relative font-bold px-2 py-2 mb-5 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none focus:shadow-outline" %>
-      <div class="member-group hidden absolute top:0 bg-gray-100 py-2 inset-x-0 mx-5 border border-gray-500 rounded" >
+  <div class="add-people absolute w-full h-full top-0 bg-black bg-opacity-25 hidden flex justify-center items-center">
+    <div class="px-6 py-4 bg-white shadow-2xl w-1/3 h-1/3 rounded relative">
+      <div class="flex justify-between">
+        <h5 class="font-bold"><%= t("invite.add_people") %></h5>
+      <button class="invite-cancel-btn font-bold text-gray-600 focus:outline-none">X</button>
       </div>
-    <div class="text-right">
-      <%= f.submit t("invite.done"),class:"invite-btn cursor-pointer font-bold text-gray-700 px-5 py-2 mx-2 bg-gray-400 rounded focus:outline-none",disabled: true %>
-    <% end %>
+      <span class="text-xs text-gray-600">#student</span>
+      <%= form_with(model:@invitation,url:workspace_invitations_path(@workspace),method: "POST",local: true) do |f| %>
+        <%= f.text_field :receiver_email,placeholder:t("invite.placeholder"),autocomplete:"off",class:"search relative font-bold px-2 py-2 mb-5 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none focus:shadow-outline" %>
+        <div class="member-group hidden absolute top:0 bg-gray-100 py-2 inset-x-0 mx-5 border border-gray-500 rounded" >
+        </div>
+      <div class="text-right">
+        <%= f.submit t("invite.send"),class:"invite-btn cursor-pointer font-bold text-gray-700 px-5 py-2 mx-2 bg-gray-400 rounded focus:outline-none",disabled: true %>
+      <% end %>
+      </div>
     </div>
   </div>
-</div>
 <% else %>
-  <h2>請先加入workspace</h2>
+  <h2><%= t("workspace.error.messages.join") %></h2>
 <% end %>
 
 
