--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,10 +1,10 @@
 <div>
   <%= render "./shared/header" %>
   <div class="chatroom grid grid-cols-12">
-    <div class="bg-light_sladock text-white col-span-2 px-2" data-controller="notification" data-notification-workspace="<%= @workspace.id %>" data-notification-id="<%= @channel.id %>">
+    <div class="bg-light_sladock text-white col-span-2 px-2" data-controller="notification" data-notification-workspace="<%= @workspace.id %>" data-notification-channel="<%= @channel&.id || 0 %>" data-notification-direct="<%= @directmsg&.id || 0 %>">
       <%= render "./shared/leftbar" %>
     </div>
-    <div class="h-full col-span-10 border border-1 bg-gray-700" data-controller="subscribe"  data-subscribe-id="<%= @workspace.id %>" data-subscribe-channel="<%= @channel.id %>">
+    <div class="h-full col-span-10 border border-1 bg-gray-700" data-controller="subscribe"  data-subscribe-id="<%= @workspace.id %>" data-subscribe-channel="<%= @channel&.id || 0 %>" data-subscribe-direct="<%= @directmsg&.id || 0 %>">
       <div class="pb-12 px-5 messages" data-target="subscribe.messages">
         <% (@channel || @directmsg).messages.order(:created_at).each do |msg| %>
           <%= render "messages/message_broadcast" , message: msg %>
