--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,37 @@
-<h2><%= t('.sign_up') %></h2>
+<%# render nav導覽列 %>
+<%= render './shared/nav' %>
+<div class="container mx-auto flex flex-col items-center text-center">
+  <h2 class="text-5xl font-bold mb-2">First, enter your email</h2>
+  <p class="mb-10">We suggest using the <strong>email address you use at work.</strong></p>
+  <div class="sign_up max-w-sm">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= render "devise/shared/links" %>
+    <div class="field text-left">
+      <%= f.label :email %>
+      <%= f.email_field :email, autofocus: true,placeholder:"account@email.com",autocomplete: "email",class:"w-full py-2 px-2 mb-6 border border-gray-700 rounded focus:outline-none focus:shadow-outline" %>
+      </div>
+    <div class="field text-left">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
+      <% end %>
+      <%= f.password_field :password,placeholder:"password",autocomplete: "new-password",class: "w-full py-2 px-2 mb-6 border border-gray-700 rounded focus:outline-none focus:shadow-outline" %>
+    </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="field text-left">
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation,placeholder: "再輸入一次密碼", autocomplete: "new-password",class: "w-full py-2 px-2 mb-6 border border-gray-700 rounded focus:outline-none focus:shadow-outline" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div class="field text-left">
+      <%= f.label :nickname %>
+      <%= f.text_field :nickname,placeholder: "sladock",class: "w-full py-2 px-2 mb-6 border border-gray-700 rounded focus:outline-none focus:shadow-outline" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit t('.sign_up'),class: "cursor-pointer text-white font-bold bg-sladock w-full py-2 border border-gray-400 rounded hover:bg-light_sladock transition-all duration-100" %>
+    </div>
+  <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :nickname %><br />
-    <%= f.text_field :nickname, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit t('.sign_up') %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
