--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,16 +1,16 @@
-<%- if controller_name != 'sessions' %>
+<%- if controller_name != 'sessions' && controller_name != 'registrations' && controller_name != 'passwords' %>
   <%= link_to t(".sign_in"), new_session_path(resource_name) %><br />
 <% end %>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+<%- if devise_mapping.registerable? && controller_name != 'registrations' && controller_name != 'sessions' && controller_name != 'passwords'  %>
   <%= link_to t(".sign_up"), new_registration_path(resource_name) %><br />
 <% end %>
 
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' && controller_name != 'sessions'%>
   <%= link_to t(".forgot_your_password"), new_password_path(resource_name) %><br />
 <% end %>
 
-<%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
+<%- if devise_mapping.confirmable? && controller_name != 'confirmations' && controller_name != 'sessions' && controller_name != 'registrations' %>
   <%= link_to t('.didn_t_receive_confirmation_instructions'), new_confirmation_path(resource_name) %><br />
 <% end %>
 
@@ -18,9 +18,10 @@
   <%= link_to t('.didn_t_receive_unlock_instructions'), new_unlock_path(resource_name) %><br />
 <% end %>
 
-<%- if devise_mapping.omniauthable? %>
+<%- if devise_mapping.omniauthable? && controller_name != 'passwords'%>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to t('devise.registrations.signed_in_with_google', provider: OmniAuth::Utils.camelize(provider)), omniauth_authorize_path(resource_name, provider) %><br />
-    <%#= link_to t('.sign_in_with_provider', provider: OmniAuth::Utils.camelize(provider)), omniauth_authorize_path(resource_name, provider) %>
+    <button class="w-full py-2 mb-6 border-2 text-googleblue border-googleblue font-bold rounded hover:shadow-md">
+      <%= link_to t('devise.registrations.signed_in_with_google', provider: OmniAuth::Utils.camelize(provider)), omniauth_authorize_path(resource_name, provider) %>
+    </button>
   <% end %>
 <% end %>
