--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <% if !@divide_exist && @last_enter_at && @last_enter_at < message.created_at %>
+  <% if !@divide_exist && @last_enter_at && (@last_enter_at < message.created_at) %>
     <% @divide_exist = true %>
     <div class='flex text-right divide'>
       <span class='h-0 border-b-0 border-t-2 block w-full border-red-600 my-auto'></span>
