更改頁面樣式

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <%= notice %>
+    <div class="absolute top-0 w-full z-10 text-white"><%= notice %></div>
     <%= yield %>
   </body>
 </html>
