--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -6,6 +6,7 @@
       <span class="pl-3">new</span>
     </div>
   <% end%>
+<div class="messages_child">
   <div class="author font-bold">
     <%= message.user.nickname %>
   </div>
