--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -1,19 +1,19 @@
-<div class="flex">
-  <h3 class="chatroomName">
-    <%= @workspace.name %>
-  </h3> 
-</div>
-<div class="w-full bg-white border "></div>
-<div class="w-full"><%= t(".sidebar.threads") %></div>
-<div class="w-full"><%= t(".sidebar.mentions") %></div>
-<div class="w-full"><%= t(".sidebar.save") %></div>
-<div class="w-full"><%= t(".sidebar.more") %></div>
-<div class="w-full"><%= t(".sidebar.shared") %></div>
-<div class="w-full">
-  <p class="font-medium flex justify-between">
-    <%= t(".channel.name") %>
-    <%= link_to t(".channel.new"), new_workspace_channels_path(workspace_id: @workspace.id) %>
-  </p>
+  <div class="">
+    <h3 class="chatroomName">
+      <%= @workspace.name %>
+    </h3> 
+  </div>  
+  <div class="w-full bg-white border"></div>
+  <div class="w-full"><%= t(".sidebar.threads") %></div>
+  <div class="w-full"><%= t(".sidebar.mentions") %></div>
+  <div class="w-full"><%= t(".sidebar.save") %></div>
+  <div class="w-full"><%= t(".sidebar.more") %></div>
+  <div class="w-full"><%= t(".sidebar.shared") %></div>
+  <div class="w-full">
+    <p class="font-medium flex justify-between">
+      <%= t(".channel.name") %>
+      <%= link_to t(".channel.new"), new_workspace_channels_path(workspace_id: @workspace.id) %>
+    </p>
     <% @channels.each do |channel| %>
       <div data-controller="channels" data-channels-id="<%= channel.id %>">
         <span>#</span>
@@ -24,14 +24,13 @@
           <button data-action="click->channels#addChannel" data-target="channels.symbol">+</button>
         <% end %>
       </div>
+  <div class="w-full">
+    <p class="font-medium"><%= t(".channel.direct") %></p>
+    <% (@workspace.users - [current_user]).each do |user| %>
+      <li>
+        <%= link_to user.nickname, workspace_directmsg_path(@workspace, user.id) %>
+      </li>
     <% end %>
-</div>
-<div class="w-full">
-  <p class="font-medium"><%= t(".channel.direct") %></p>
-  <% (@workspace.users - [current_user]).each do |user| %>
-    <li>
-      <%= link_to user.nickname, workspace_directmsg_path(@workspace, user.id) %>
-    </li>
-  <% end %>
+  </div>
 </div>
 
