--- a/app/views/channels/new.html.erb
+++ b/app/views/channels/new.html.erb
@@ -1,7 +1,7 @@
 <div>
   <%= render "./shared/header" %>
-  <div class="chatroom grid grid-cols-12">
-    <div class="bg-light_sladock col-span-2">
+  <div class="chatroom grid grid-cols-12 ">
+    <div class="bg-light_sladock col-span-2 h-screen_94">
       <%= form_with(model: @channel, url:workspace_channels_path(id: @channel.workspace_id), local:true) do |f| %>
       <div class="field">
         <%= f.label :name, t(".name"), class: "text-white font-bold" %>
@@ -21,13 +21,4 @@
     <div class=" col-span-10 border border-1">
     </div>  
   </div>
-  <div class="chatroom grid grid-cols-12 h-10 border border-1 ">
-    <div class="bg-light_sladock text-white col-span-2">
-    </div>
-    <div class=" col-span-10">
-    </div>  
-  </div>
-
-
-  
 </div>
