--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 
-<div class="header bg-deep_sladock h-10 border border-1 ">
+<div class="header bg-deep_sladock h-10 border border-1 sticky top-0 w-full">
     <div class="pt-1 grid grid-cols-4">
       <div class="w-full search-area flex items-center col-start-2 col-end-4 ">
         <%= inline_svg_pack_tag( "media/images/histroy.svg", class: "h-8 w-8 pr-2") %>
