--- a/app/views/workspaces/new.html.erb
+++ b/app/views/workspaces/new.html.erb
@@ -1,26 +1,17 @@
 
-<div>
   <%= render "./shared/header" %>
-  <div class="chatroom grid grid-cols-12">
+  <div class="chatroom grid grid-cols-12 h-screen_94"                                                       ">
     <div class="bg-light_sladock col-span-2">
       <%= form_with(model: @workspace, url: workspaces_path,local: true)do |f| %>
-    <div>
-    <%= f.label :name,t(".name"), class:"text-white font-bold"%>
-    <%= f.text_field :name, placeholder: t(".placeholder")%>
-  </div>
-    <%= f.submit t("utilities.submit") %>
-  <% end %>
-  </div>
+      <div>
+        <%= f.label :name,t(".name"), class:"text-white font-bold"%>
+        <%= f.text_field :name, placeholder: t(".placeholder")%>
+      </div>
+      <%= f.submit t("utilities.submit") %>
+      <% end %>
+    </div>
     <div class="col-span-10 border border-1">
     </div>  
   </div>
-  <div class="chatroom grid grid-cols-12 h-10 border border-1">
-    <div class="bg-light_sladock text-white col-span-2">
-    </div>
-    <div class=" col-span-10">
-    </div>  
-  </div>
 
 
-  
-</div>
