--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -2,7 +2,7 @@
   <div>
     <%= render "./shared/header" %>
     <div class="chatroom grid grid-cols-12">
-      <div class="bg-light_sladock text-white col-span-2">
+      <div class="bg-light_sladock text-white col-span-2 h-screen_94">
         <h1><%= t(".name",name:@workspace.name) %></h1>
         <%= link_to t(".create_channel"), new_workspace_channels_path(@workspace.id) %>
         <h2><%= t(".all_channels",name:@workspace.name) %></h2>
@@ -31,19 +31,14 @@
         <%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %>
       </div>
       <div class=" col-span-10 border border-1">
-      </div>  
-    </div>
-    <div class="chatroom grid grid-cols-12 h-10 border border-1 ">
-      <div class="bg-light_sladock text-white col-span-2">
-      </div>
-      <div class=" col-span-10">
+       <%# button顯示 %>
+        <button class="invite-ws-btn h-8 w-8  rounded hover:bg-gray-100 hover:stroke-gray active:bg-gray-400 focus:outline-none">
+          <%= inline_svg_pack_tag( "media/images/invite.svg" , class: "stroke-current text-gray-600 hover:stroke-gray") %>
+        </button>
       </div>  
     </div>
   </div>
-  <%# button顯示 %>
-  <button class="invite-ws-btn h-8 w-8  rounded hover:bg-gray-100 hover:stroke-gray active:bg-gray-400 focus:outline-none">
-    <%= inline_svg_pack_tag( "media/images/invite.svg" , class: "stroke-current text-gray-600 hover:stroke-gray") %>
-  </button>
+
 
   <div class="add-people absolute w-full h-full top-0 bg-black bg-opacity-25 hidden flex justify-center items-center">
     <div class="px-6 py-4 bg-white shadow-2xl w-1/3 h-1/3 rounded relative">
