--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -2,11 +2,11 @@
   <% if !@divide_exist && @last_enter_at && (@last_enter_at < message.created_at) %>
     <% @divide_exist = true %>
     <div class='flex text-right divide'>
-      <span class='h-0 border-b-0 border-t-2 block w-full border-red-600 my-auto'></span>
+      <span class='h-0 border-b-0 border-t-2 block flex-grow border-red-600 my-auto'></span>
       <span class="pl-3">new</span>
     </div>
   <% end%>
-<div class="messages_child">
+<div class="messages_child pl-5">
   <div class="author font-bold">
     <%= message.user.nickname %>
   </div>
