--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -5,7 +5,7 @@
       <%= render "./shared/leftbar" %>
     </div>
     <div class="messages_area break-all flex flex-col-reverse col-span-10 border border-1 bg-gray-300 overflow-auto h-screen_90" data-controller="subscribe"  data-subscribe-id="<%= @workspace.id %>" data-subscribe-channel="<%= @channel&.id || 0 %>" data-subscribe-direct="<%= @directmsg&.id || 0 %>">
-      <div class="flex-col pb-5 messages" data-target="subscribe.messages">
+      <div class="pb-5 messages" data-target="subscribe.messages">
         <% (@channel || @directmsg).messages.order(:created_at).each do |msg| %>
           <%= render "messages/message_broadcast" , message: msg %>
         <% end %>
