--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -17,4 +17,32 @@
         <% end %>
     </div>  
   </div>  
+  <%= form_with model: @new_message ,class:"w-full max-w-lg border-2 rounded absolute top-0 bg-white hidden popup", local: "true" do |f|%>
+  <div class="flex flex-wrap mb-6">
+    <div class="w-full flex share-title justify-between">
+      <p class="text-2xl font-bold mt-3 ml-1"> Share this message</p>
+      <div class="cancel-img mt-4 mr-2">
+        <%= inline_svg_pack_tag("media/images/cancel.svg", class:"h-8 w-8 pr-2") %>
+      </div>
+    </div>
+    <div class="w-full px-3 mt-4">
+      <%= f.label :channel_id, "Share with", class:"block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+      <%= number_field :messageable_id, class:"appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"%>
+    </div>
+  </div>
+  <div class="flex flex-wrap mb-6">
+    <div class="w-full px-3">
+      <%= f.label :content, "Message", class:"block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+      <%= f.text_area :content, size: "30x12",class:"no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" %>
+    </div>
+  </div>
+  <div class="flex flex-wrap mb-6 px-3 mt-4">
+    <div class="w-full px-3 border-l-4">
+      <%= f.label :content, "Share message" %>
+    </div>
+  </div>
+  <div class="flex flex-row-reverse mb-4 mr-2">
+     <%= f.submit "share", class:"shadow bg-teal-400 hover:bg-teal-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
+  </div>
+<% end %>
 </div>
