add right panel and thread feature without actioncable

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -47,7 +47,7 @@
       </div>
     </div>
     <%# 訊息輸入框 %>
-    <div class="sticky">
+    <div class="sticky" data-controller="subscribe">
       <% if @channel %>
         <%= render "./shared/msgform" %> 
       <% else %>
