--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -46,6 +46,15 @@
               <%= render './shared/reaction', message: message %>
             </div>
           </div>
+          <div class="thread">
+          <div class="thread-btn">
+            <%= link_to workspace_channel_thread_path(@workspace, message.messageable_id, message) do %>
+              <i class="far fa-comment-dots" style="color:white"></i>
+            <% end %>
+            <% if message.children.count > 0 %>
+              有 <%= message.children.count %> 則回覆
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
@@ -57,4 +66,3 @@
     </div>
   </div>
 </div>
-
