--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -51,18 +51,23 @@
     <div class="px-6 py-4 bg-white shadow-2xl w-1/3 h-1/3 rounded relative">
       <div class="flex justify-between">
         <h5 class="font-bold"><%= t("invite.add_people") %></h5>
-      <button class="invite-cancel-btn font-bold text-gray-600 focus:outline-none">X</button>
+        <button class="invite-cancel-btn font-bold text-gray-600 focus:outline-none">X</button>
       </div>
-      <span class="text-xs text-gray-600">#student</span>
-      <%= form_with(url: invite_channel_users_channels_path(@channel.id),method: "POST",local: true) do |f| %>
-        <%= f.text_field :name,placeholder:t("invite.placeholder"),autocomplete:"off",class:"search relative font-bold px-2 py-2 mb-5 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none focus:shadow-outline" %>
-        <div class="member-group hidden absolute top:0 bg-gray-100 py-2 inset-x-0 mx-5 border border-gray-500 rounded" >
+      <span class="text-xs text-gray-600">#<%= @channel.name %></span>
+      
+        <%= form_with(url: invite_channel_users_channels_path(@channel.id),method: "POST",local: true) do |f| %>
+        <div class="flex">
+          <%= f.text_field :name,placeholder:t("invite.placeholder"),autocomplete:"off",class:"search relative font-bold px-2 py-2 mb-5 border border-gray-800 rounded flex-grow placeholder-gray-600 focus:outline-none focus:shadow-outline" %>
+          <div>
+            <%= f.submit t("invite.send"),class:"invite-btn cursor-pointer font-bold text-gray-700 px-5 py-2 mx-2 bg-gray-400 rounded focus:outline-none",disabled: true %>
+          </div>
         </div>
-      <div class="text-right">
-        <%= f.submit t("invite.done"),class:"invite-btn cursor-pointer font-bold text-gray-700 px-5 py-2 mx-2 bg-gray-400 rounded focus:outline-none",disabled: true %>
-      <% end %>
+        <% end %>
+      <div class="search-data hidden absolute top:0 bg-gray-100 py-2 inset-x-0 mx-5 border border-gray-500 rounded" >
       </div>
     </div>
   </div>
 </div>
+
+
 
