--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -4,10 +4,10 @@
     <div class="bg-light_sladock text-white col-span-2 px-2 overflow-auto h-screen -mb-10" data-controller="notification" data-notification-workspace="<%= @workspace.id %>" data-notification-channel="<%= @channel&.id || 0 %>" data-notification-direct="<%= @directmsg&.id || 0 %>" data-notification-user="<%= current_user.nickname %>">
       <%= render "./shared/leftbar" %>
     </div>
-    <div class="messages_area break-all flex flex-col-reverse col-span-10 border border-1 bg-white overflow-auto h-screen_90 " data-controller="subscribe"  data-subscribe-id="<%= @workspace.id %>" data-subscribe-channel="<%= @channel&.id || 0 %>" data-subscribe-direct="<%= @directmsg&.id || 0 %>">
+    <div class="messages_area break-all flex flex-col-reverse col-span-10 border border-1 bg-gray-300 overflow-auto h-screen_90" data-controller="subscribe"  data-subscribe-id="<%= @workspace.id %>" data-subscribe-channel="<%= @channel&.id || 0 %>" data-subscribe-direct="<%= @directmsg&.id || 0 %>" data-subscribe-recipient="<%= current_user.id %>" >
       <div class="pb-5 messages" data-target="subscribe.messages">
         <% @messages.order(:created_at).each do |msg| %>
-          <%= render "messages/message_broadcast" , message: msg %>
+          <%= render "messages/message_broadcast" , {message: msg}%>
         <% end %>
       </div>
       <% if @channel %>
