share message style and structure

--- a/app/javascript/stylesheets/Frontend/shared.scss
+++ b/app/javascript/stylesheets/Frontend/shared.scss
@@ -4,3 +4,11 @@
   .btn-blue {
     @apply bg-blue-500 text-white;
   }
+
+.txtcolumn .share-btn{
+  display: none;
+}
+
+.txtcolumn:hover .share-btn{
+  display: block;
+}
