--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -17,7 +17,7 @@
         <% end %>
     </div> 
       <div class="w-full h-full absolute hidden popup bg-black bg-opacity-25">
-        <%= form_with model: @message, url:message_add_path(@channel),method:'post',class:"w-full max-w-lg border-2 rounded bg-white relative m-auto", local: "true" do |f|%>
+        <%= form_with model: @message, url: add_messages_path(locale: 'zh-TW'), method: 'post', class:"w-full max-w-lg border-2 rounded-lg bg-white relative m-auto" do |f|%>
           <div class="flex flex-wrap mb-6">
             <div class="w-full flex share-title justify-between">
               <p class="text-2xl font-bold mt-3 ml-1"> Share this message</p>
@@ -33,7 +33,7 @@
           <div class="flex flex-wrap mb-6">
             <div class="w-full px-3">
                 <%= f.label :content, "Message", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
-                <%= f.text_area :content,placeholder: 'Add some message, if you\'d like', size: "30x12",class:"textArea no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" %>
+                <%= f.text_area :content,placeholder: 'Add some message, if you\'d like', size: "20x10",class:"textArea no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" %>
             </div>
           </div>
           <%= f.hidden_field :message_id, value: '', id: 'message_id' %>
