--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -6,7 +6,7 @@
   </div>
 <% end%>
 <div class="messages_child pl-5">
-  <div class="flex justify-between hover:bg-gray-100 relative">
+  <div class="flex justify-between hover:bg-gray-100 relative txtcolumn mt-2 mb-2">
     <div class="txt flex">
       <div class="author font-bold mr-2">
         <%= message.user.nickname %>
@@ -15,14 +15,15 @@
         <div class="createtime mr-2">
           <%= message.created_at.strftime("%I:%M") %>
         </div>
-        <% if message.message_id.present? %>
-        <div>
-          <%= message.message.content %>
-        </div>
-        <% end %>
-        <div class="content">
+         <div class="content">
             <%= message.content %>
-        </div>
+         </div>
+        <% if message.message_id.present? %>
+          <div  class="border-l-4 m-2">
+            <span class="ml-2"> <%= message.message.content %> </span>
+          </div> 
+        <% end %>
+       
       </div>
     </div>
     <button class= "share-btn btn btn-blue absolute right-0  mr-10 -mt-3" data-id="<%= message.id %>">share</button>
