--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,17 +2,21 @@
 <%= render './shared/nav' %>
 <div class="container mx-auto flex flex-col items-center text-center">
   <h2 class="text-5xl font-bold mb-2">First, enter your email</h2>
-  <p class="mb-10">We suggest using the <strong>email address you use at work.</strong></p>
+  <p class="mb-5">We suggest using the <strong>email address you use at work.</strong></p>
   <div class="sign_up max-w-sm">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
     <%= render "devise/shared/links" %>
     <div class="field text-left">
       <%= f.label :email %>
-      <%= f.email_field :email, autofocus: true,placeholder:"account@email.com",autocomplete: "email",class:"w-full py-2 px-2 mb-6 border border-gray-700 rounded focus:outline-none focus:shadow-outline" %>
+      <% if (session[:email]) %>
+        <%= f.email_field :email, value: session[:email],autofocus: true,placeholder:"account@email.com",autocomplete: "email",class:"w-full py-2 px-2 mb-6 border border-gray-700 rounded focus:outline-none focus:shadow-outline" %>
+      <% else %>
+        <%= f.email_field :email,autofocus: true,placeholder:"account@email.com",autocomplete: "email",class:"w-full py-2 px-2 mb-6 border border-gray-700 rounded focus:outline-none focus:shadow-outline" %>
+      <% end %>
       </div>
     <div class="field text-left">
-      <%= f.label :password %>
+      <%= f.label :password%>
       <% if @minimum_password_length %>
       <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
       <% end %>
@@ -35,3 +39,5 @@
   <% end %>
   </div>
 </div>
+
+
