--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -6,10 +6,8 @@
                  resource: resource.class.model_name.human.downcase)
        %>
    <%# </h2> %>
-    <ul>
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <span class="errors_messages text-red-500 mb-5"><%= message %></span>
       <% end %>
-    </ul>
   </div>
 <% end %>
