--- a/app/views/workspaces/new.html.erb
+++ b/app/views/workspaces/new.html.erb
@@ -1,17 +1,46 @@
 
-  <%= render "./shared/header" %>
-  <div class="chatroom grid grid-cols-12 h-screen_94"                                                       ">
-    <div class="bg-light_sladock col-span-2">
-      <%= form_with(model: @workspace, url: workspaces_path,local: true)do |f| %>
-      <div>
-        <%= f.label :name,t(".name"), class:"text-white font-bold"%>
-        <%= f.text_field :name, placeholder: t(".placeholder")%>
+<%= render "./shared/header" %>
+  <div class="chatroom flex h-full" data-controller="hello">
+    <div class=" leftbar flex flex-col bg-light_sladock">
+      <div class="box-border border-b bg-light_sladock border-sladock_border h-16 flex items-center">
+        <div class="ml-5 w-2/4 h-5 px-2 bg-ws_name_purple rounded-full text-white font-bold text-sm truncate" data-target="hello.output"></div>
       </div>
-      <%= f.submit t("utilities.submit") %>
-      <% end %>
+      <div class="bg-light_sladock text-white h-left_full" style="width: 300px">
+      </div>
     </div>
-    <div class="col-span-10 border border-1">
-    </div>  
+    <div class="flex flex-col flex-grow min-w-0 min-h-0 ml-10">
+      <div class=" max-w-2xl py-5">
+        <p class=" text-xs my-3"><%= t(".step") %></p>
+        <h3 class="text-5xl font-bold leading-tight"><%= t(".name") %></h3>
+        <p class="text-sm mt-3 mb-5"><%= t(".name_detail") %>
+        </p>
+        <%= form_with(model: @workspace, url: workspaces_path, local: true, class: "text-xl") do |f| %>
+          <div class="relative">
+            <%= f.text_field :name, 
+              placeholder: t(".placeholder"),
+              data: { action: "input->hello#input focus->hello#check" },
+              class: "w-full font-bold px-2 py-2 mb-5 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none focus:shadow-outline" 
+            %>
+            <div class="hidden check-word absolute inset-y-0 right-0 flex items-center mr-3 text-gray-700" data-target="hello.check">
+              255
+            </div>              
+          </div>
+          <%= f.submit t("utilities.submit"),
+              class:"create-ws-btn cursor-pointer block font-bold text-white px-20 py-2 mb-5 mr-auto bg-green-800 rounded focus:outline-none"
+          %>
+        <% end %>
+        <% if @workspace.errors.any? %>
+          <% if Workspace.find_by(name: params[:workspace][:name]) %>
+            <span class="error_messages text-red-600 text-sm font-bold" data-target="hello.error"><%= t("..errors.messages.exist",name: params[:workspace][:name]) %></span>
+          <% else %>
+            <span class="error_messages text-red-600 text-sm font-bold" data-target="hello.error"><%= t("..errors.messages.blank") %></span>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
   </div>
+
+
+
 
 
