--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -36,7 +36,7 @@
                 <%= f.text_area :content,placeholder: 'Add some message, if you\'d like', size: "20x10",class:"textArea no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" %>
             </div>
           </div>
-          <%= f.hidden_field :message_id, value: '', id: 'message_id' %>
+          <%= f.hidden_field :share_message_id, value: '', id: 'share_message_id' %>
           <div class="flex flex-wrap mb-6 px-3 mt-4">
             <div class="w-full px-3 border-l-4 select-message">
             </div>
